--- a/app/dockerfile
+++ b/app/dockerfile
@@ -6,4 +6,6 @@ COPY . .
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+WORKDIR ..
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
