--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -52,7 +52,7 @@ service-identity==23.1.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
-SQLAlchemy==2.0.22
+SQLAlchemy==1.4.49
 starlette==0.27.0
 tldextract==3.4.4
 Twisted==22.10.0
@@ -62,3 +62,5 @@ uvicorn==0.23.2
 w3lib==2.1.2
 yarl==1.9.2
 zope.interface==6.0
+databases==0.8.0
+asyncpg==0.28.0
